# dictutils

./: Makefile.am  configure.ac  mkwf.sh
src/: Makefile.am  dicinvert.cpp  dictext.cpp  utils.cpp  utils.hpp  vocabulary.cpp  vocabulary.hpp  wordform.cpp  wordform.hpp  wordreader.cpp  wordreader.hpp
tests/: Makefile.am  wcex.cpp
